multiappli-ingress/medium-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: medium-service
spec:
  selector:
    app: nginx-medium
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
