multiappli-ingress/react-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-service
spec:
  selector:
    app: nginx-react
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
